--- a/Wall Of Fame/View/Cell/GitRepositoryTableViewCell.xib
+++ b/Wall Of Fame/View/Cell/GitRepositoryTableViewCell.xib
@@ -25,6 +25,9 @@
                             <constraint firstAttribute="height" constant="80" id="F0R-tT-Kow"/>
                             <constraint firstAttribute="width" secondItem="4Fl-3P-so9" secondAttribute="height" multiplier="1:1" id="q9B-hX-xAr"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isCircular" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RepoName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t2u-AC-dTR">
                         <rect key="frame" x="104" y="16" width="85" height="21"/>
@@ -33,8 +36,8 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qB2-ux-HWK">
-                        <rect key="frame" x="268" y="73" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="271.5" y="73" width="35.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -45,26 +48,47 @@
                             <constraint firstAttribute="width" secondItem="vML-qV-7sg" secondAttribute="height" multiplier="1:1" id="jGZ-EY-6O8"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nid-X4-Ki6">
-                        <rect key="frame" x="129" y="86" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQw-P4-bOM">
+                        <rect key="frame" x="16" y="100" width="80" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nid-X4-Ki6">
+                        <rect key="frame" x="104" y="41" width="37.5" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="vML-qV-7sg" firstAttribute="centerY" secondItem="4Fl-3P-so9" secondAttribute="centerY" id="0Zq-ev-pXD"/>
+                    <constraint firstItem="Nid-X4-Ki6" firstAttribute="top" secondItem="t2u-AC-dTR" secondAttribute="bottom" constant="4" id="1hQ-c4-xej"/>
                     <constraint firstItem="qB2-ux-HWK" firstAttribute="centerX" secondItem="vML-qV-7sg" secondAttribute="centerX" id="AJo-dj-fkC"/>
                     <constraint firstItem="t2u-AC-dTR" firstAttribute="top" secondItem="4Fl-3P-so9" secondAttribute="top" id="B7i-tx-36j"/>
                     <constraint firstItem="4Fl-3P-so9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Ja0-gR-SgP"/>
                     <constraint firstItem="qB2-ux-HWK" firstAttribute="top" secondItem="vML-qV-7sg" secondAttribute="bottom" constant="2" id="NWi-vm-9M7"/>
+                    <constraint firstItem="RQw-P4-bOM" firstAttribute="centerX" secondItem="4Fl-3P-so9" secondAttribute="centerX" id="Q6X-BT-BpQ"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Nid-X4-Ki6" secondAttribute="bottom" constant="16" id="SxT-bU-aes"/>
+                    <constraint firstItem="Nid-X4-Ki6" firstAttribute="leading" secondItem="t2u-AC-dTR" secondAttribute="leading" id="UfD-RE-bli"/>
                     <constraint firstAttribute="trailing" secondItem="vML-qV-7sg" secondAttribute="trailing" constant="16" id="XXB-62-Qxj"/>
+                    <constraint firstItem="RQw-P4-bOM" firstAttribute="trailing" secondItem="4Fl-3P-so9" secondAttribute="trailing" id="bTv-fW-jGY"/>
+                    <constraint firstItem="vML-qV-7sg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Nid-X4-Ki6" secondAttribute="trailing" constant="16" id="esw-tE-CMm"/>
                     <constraint firstItem="t2u-AC-dTR" firstAttribute="leading" secondItem="4Fl-3P-so9" secondAttribute="trailing" constant="8" id="heZ-pI-0LQ"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="RQw-P4-bOM" secondAttribute="bottom" constant="16" id="lua-Qa-KXh"/>
+                    <constraint firstItem="RQw-P4-bOM" firstAttribute="leading" secondItem="4Fl-3P-so9" secondAttribute="leading" id="pRd-WI-edR"/>
+                    <constraint firstItem="RQw-P4-bOM" firstAttribute="top" secondItem="4Fl-3P-so9" secondAttribute="bottom" constant="4" id="udW-x2-Pdj"/>
                     <constraint firstItem="4Fl-3P-so9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="v0R-2Z-1m7"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="ownerAliasImageView" destination="4Fl-3P-so9" id="iZ6-bO-CED"/>
+                <outlet property="ownerNameLabel" destination="RQw-P4-bOM" id="ySd-EQ-NcF"/>
+                <outlet property="repoDescriptionLabel" destination="Nid-X4-Ki6" id="TW6-FD-Fkx"/>
+                <outlet property="repoNameLabel" destination="t2u-AC-dTR" id="a0z-tA-Vsw"/>
+                <outlet property="starsLabel" destination="qB2-ux-HWK" id="DIu-E8-8zh"/>
+            </connections>
             <point key="canvasLocation" x="-28.985507246376812" y="113.16964285714285"/>
         </tableViewCell>
     </objects>
