--- a/Wall Of Fame/View/Cell/GitRepositoryTableViewCell.xib
+++ b/Wall Of Fame/View/Cell/GitRepositoryTableViewCell.xib
@@ -12,25 +12,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="189" id="KGk-i7-Jjw" customClass="GitRepositoryTableViewCell" customModule="Wall_Of_Fame" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="189"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="131" id="KGk-i7-Jjw" customClass="GitRepositoryTableViewCell" customModule="Wall_Of_Fame" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="131"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="188.66666666666666"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="130.66666666666666"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XVf-KI-DW1">
-                        <rect key="frame" x="16" y="8" width="288" height="172.66666666666666"/>
+                        <rect key="frame" x="16" y="8.0000000000000071" width="288" height="114.66666666666669"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="RepoName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t2u-AC-dTR">
-                                <rect key="frame" x="104" y="8" width="84.666666666666686" height="20.666666666666671"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RepoName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t2u-AC-dTR">
+                                <rect key="frame" x="104" y="7.9999999999999982" width="84.666666666666686" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nid-X4-Ki6">
-                                <rect key="frame" x="104" y="53.666666666666686" width="176" height="43"/>
-                                <string key="text">laskffjklSFDASJGHAKJLDGHADLSGHKJLADSGHAJKSDGHSDJGHAJKSDGHLKJSDAGHDSJKAGHDJSKLAGHJADKLSGHJAKDSGHAJDSGHL;ADSGHL;DSAGHJDSGHJSDAKGHKAJSDLGHLKASDGHLSDJKAGHSDAJKGHASDJKGHAS;D</string>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nid-X4-Ki6">
+                                <rect key="frame" x="104" y="53.333333333333336" width="176" height="14.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -46,13 +45,13 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Author:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQw-P4-bOM">
-                                <rect key="frame" x="104" y="32.666666666666657" width="47.666666666666657" height="17"/>
+                                <rect key="frame" x="104" y="32.333333333333336" width="47.666666666666657" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="vML-qV-7sg">
-                                <rect key="frame" x="104" y="144.66666666666666" width="20" height="20"/>
+                                <rect key="frame" x="104" y="71.666666666666671" width="20" height="20"/>
                                 <color key="tintColor" red="0.96470588235294119" green="0.77647058823529413" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="fuj-H0-Tzt"/>
@@ -66,13 +65,13 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qB2-ux-HWK">
-                                <rect key="frame" x="128" y="147.66666666666666" width="35.666666666666657" height="17"/>
+                                <rect key="frame" x="128" y="74.666666666666671" width="35.666666666666657" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.96577388050000001" green="0.7775706053" blue="0.1576372385" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jee-qv-2aa">
-                                <rect key="frame" x="159.33333333333334" y="32" width="35.333333333333343" height="17"/>
+                                <rect key="frame" x="159.33333333333331" y="32.333333333333336" width="35.333333333333343" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -88,7 +87,7 @@
                             <constraint firstItem="Nid-X4-Ki6" firstAttribute="top" secondItem="RQw-P4-bOM" secondAttribute="bottom" constant="4" id="Eaw-9S-mje"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="4Fl-3P-so9" secondAttribute="bottom" constant="16" id="H2n-xg-xhk"/>
                             <constraint firstItem="4Fl-3P-so9" firstAttribute="top" secondItem="XVf-KI-DW1" secondAttribute="top" constant="16" id="Iew-Kg-2DW"/>
-                            <constraint firstAttribute="bottom" secondItem="vML-qV-7sg" secondAttribute="bottom" constant="8" id="L3m-4m-fFX"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vML-qV-7sg" secondAttribute="bottom" constant="8" id="L3m-4m-fFX"/>
                             <constraint firstItem="vML-qV-7sg" firstAttribute="leading" secondItem="Nid-X4-Ki6" secondAttribute="leading" id="O7W-0d-h5q"/>
                             <constraint firstItem="RQw-P4-bOM" firstAttribute="top" secondItem="t2u-AC-dTR" secondAttribute="bottom" constant="4" id="SO8-nL-kN4"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Jee-qv-2aa" secondAttribute="trailing" constant="16" id="Y87-JH-3mm"/>
@@ -125,7 +124,7 @@
                 <outlet property="starsImageView" destination="vML-qV-7sg" id="8ES-0s-r6I"/>
                 <outlet property="starsLabel" destination="qB2-ux-HWK" id="DIu-E8-8zh"/>
             </connections>
-            <point key="canvasLocation" x="-217.39130434782609" y="123.5054347826087"/>
+            <point key="canvasLocation" x="-217.39130434782609" y="99.864130434782609"/>
         </tableViewCell>
     </objects>
     <resources>
