--- a/Wall Of Fame/View/EmptyStateView.xib
+++ b/Wall Of Fame/View/EmptyStateView.xib
@@ -45,7 +45,7 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GSR-Nw-H4e">
                     <rect key="frame" x="107" y="503" width="200" height="40"/>
-                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.96470588239999999" green="0.77647058820000003" blue="0.15686274510000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="63N-XZ-xB1"/>
                         <constraint firstAttribute="height" constant="40" id="imL-ce-tnM"/>
