--- a/Wall Of Fame/View/Cell/GitRepositoryTableViewCell.xib
+++ b/Wall Of Fame/View/Cell/GitRepositoryTableViewCell.xib
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="131" id="KGk-i7-Jjw" customClass="GitRepositoryTableViewCell" customModule="Wall_Of_Fame" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="131"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="189" id="KGk-i7-Jjw" customClass="GitRepositoryTableViewCell" customModule="Wall_Of_Fame" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="402" height="189"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="130.66666666666666"/>
+                <rect key="frame" x="0.0" y="0.0" width="402" height="189"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XVf-KI-DW1">
-                        <rect key="frame" x="16" y="8.0000000000000071" width="288" height="114.66666666666669"/>
+                        <rect key="frame" x="16" y="8" width="370" height="173"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RepoName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t2u-AC-dTR">
                                 <rect key="frame" x="104" y="7.9999999999999982" width="84.666666666666686" height="20.333333333333329"/>
@@ -29,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nid-X4-Ki6">
-                                <rect key="frame" x="104" y="53.333333333333336" width="176" height="14.333333333333336"/>
+                                <rect key="frame" x="104" y="53.333333333333336" width="258" height="14.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -44,7 +42,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isCircular" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Author:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQw-P4-bOM">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQw-P4-bOM">
                                 <rect key="frame" x="104" y="32.333333333333336" width="47.666666666666657" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
@@ -69,8 +67,8 @@
                                 <color key="textColor" red="0.96470588235294119" green="0.77647058823529413" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jee-qv-2aa">
-                                <rect key="frame" x="159.33333333333331" y="32.333333333333336" width="35.333333333333343" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jee-qv-2aa">
+                                <rect key="frame" x="153.66666666666666" y="32.333333333333336" width="35.333333333333343" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -89,9 +87,9 @@
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vML-qV-7sg" secondAttribute="bottom" constant="8" id="L3m-4m-fFX"/>
                             <constraint firstItem="vML-qV-7sg" firstAttribute="leading" secondItem="Nid-X4-Ki6" secondAttribute="leading" id="O7W-0d-h5q"/>
                             <constraint firstItem="RQw-P4-bOM" firstAttribute="top" secondItem="t2u-AC-dTR" secondAttribute="bottom" constant="4" id="SO8-nL-kN4"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Jee-qv-2aa" secondAttribute="trailing" constant="16" id="Y87-JH-3mm"/>
                             <constraint firstItem="RQw-P4-bOM" firstAttribute="leading" secondItem="t2u-AC-dTR" secondAttribute="leading" id="bNf-6X-Gtc"/>
                             <constraint firstItem="Nid-X4-Ki6" firstAttribute="leading" secondItem="t2u-AC-dTR" secondAttribute="leading" id="bnO-iN-uIm"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Jee-qv-2aa" secondAttribute="trailing" constant="8" id="ipj-Y3-QTU"/>
                             <constraint firstItem="4Fl-3P-so9" firstAttribute="leading" secondItem="XVf-KI-DW1" secondAttribute="leading" constant="8" id="o2r-lH-hzR"/>
                             <constraint firstItem="vML-qV-7sg" firstAttribute="top" secondItem="Nid-X4-Ki6" secondAttribute="bottom" constant="4" id="oiT-WQ-o6X"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="t2u-AC-dTR" secondAttribute="trailing" constant="16" id="s55-fl-nlV"/>
@@ -123,7 +121,7 @@
                 <outlet property="starsImageView" destination="vML-qV-7sg" id="8ES-0s-r6I"/>
                 <outlet property="starsLabel" destination="qB2-ux-HWK" id="DIu-E8-8zh"/>
             </connections>
-            <point key="canvasLocation" x="-217.39130434782609" y="99.864130434782609"/>
+            <point key="canvasLocation" x="-234.78260869565219" y="84.375"/>
         </tableViewCell>
     </objects>
     <resources>
